k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ableton-ebs
  namespace: ableton-ebs
  labels:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ableton-ebs
  template:
    metadata:
      labels:
        app: ableton-ebs
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: ableton-ebs
        image: ghcr.io/fabian-lindhardt/ableton-ebs:latest 
        # Note: You need to build and push this image, or change the image name
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ableton-ebs
  namespace: ableton-ebs
spec:
  selector:
    app: ableton-ebs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
